Closed Bug 1846837 Opened 2 years ago Closed 2 years ago

Bug 1727181 broke overriding domain in message ID with identity pref "FQDN"

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115? fixed, thunderbird120? fixed)

RESOLVED FIXED
121 Branch
Tracking Status
thunderbird_esr115 ? fixed
thunderbird120 ? fixed

People

(Reporter: betterbird.project+8, Assigned: babolivier, Mentored)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [TM 115.4.3+])

Attachments

(2 files)

+++ This bug was initially created as a clone of Bug #1727181 +++

Bug 1727181 broke overriding domain in message ID with identity pref "FQDN".

Keywords: regression
Regressed by: 1727181

Brendan, can you investigate this?

Flags: needinfo?(brendan)
Assignee: nobody → brendan
Flags: needinfo?(brendan)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Target Milestone: --- → 121 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e53b4aa93adc
Use the FQDN identity attribute to generate Message-Id headers, if set. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

Comment on attachment 9360184 [details]
Bug 1846837 - Use the FQDN identity attribute to generate Message-Id headers, if set. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): bug 1727181
User impact if declined: Newsgroups users using the FQDN identity attribute see messages sent to newsgroups sent with a Message-Id header using an incorrect domain.
Testing completed (on c-c, etc.): On c-c
Risk to taking this patch (and alternatives if risky): None that I can think of. I don't believe the code changed by this patch has been changed since bug 1727181 (which has already been uplifted to ESR).

Attachment #9360184 - Flags: approval-comm-esr115?
Attachment #9360184 - Flags: approval-comm-beta?

Comment on attachment 9360184 [details]
Bug 1846837 - Use the FQDN identity attribute to generate Message-Id headers, if set. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9360184 - Flags: approval-comm-beta? → approval-comm-beta+

This will need an esr115 patch due to bug 1854255 (ef6629fe1cb953).

Flags: needinfo?(brendan)

Actually a beta patch would be helpful too since ef6629fe1cb953 is not on beta and I'd rather not uplift it.

Also update the message ID generation to use nsACString instead of raw strings.

This is https://phabricator.services.mozilla.com/D191842 but rebased to be uplifted to ESR and beta.

Since both beta and ESR are blocked by the same commit, I've made a patch that should cover both of them. Let me know if you need separate patches for each version.

I'm not sure whether this patch needs review since there's little to no change to the original patch that landed on c-c.

Flags: needinfo?(brendan)
Attachment #9360184 - Flags: approval-comm-esr115?
Attachment #9360184 - Flags: approval-comm-beta+

Comment on attachment 9362802 [details]
Bug 1846837 - Use the FQDN identity attribute to generate Message-Id headers, if set (ESR + beta). r=#thunderbird-reviewers

This is for the beta/esr version of the patch. D193193
[Triage Comment]
Previously approved for beta

[Approval Request Comment]
Regression caused by (bug #): bug 1727181
User impact if declined: Newsgroups users using the FQDN identity attribute see messages sent to newsgroups sent with a Message-Id header using an incorrect domain.
Testing completed (on c-c, etc.): On c-c
Risk to taking this patch (and alternatives if risky): None that I can think of. I don't believe the code changed by this patch has been changed since bug 1727181 (which has already been uplifted to ESR).

Attachment #9362802 - Flags: approval-comm-esr115?
Attachment #9362802 - Flags: approval-comm-beta+
Whiteboard: [TM 115.4.3+]

Comment on attachment 9362802 [details]
Bug 1846837 - Use the FQDN identity attribute to generate Message-Id headers, if set (ESR + beta). r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9362802 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: