Bug 1846837 - Use the FQDN identity attribute to generate Message-Id headers, if set. r=mkmelin

Also update the message ID generation to use nsACString instead of raw strings.

Differential Revision: https://phabricator.services.mozilla.com/D191842

--HG--
extra : amend_source : c19f9f6703a28a24ba3010f1e0f1172a840bfbff